--- a/RockPaperScissors/RockPaperScissors/Base.lproj/Main.storyboard
+++ b/RockPaperScissors/RockPaperScissors/Base.lproj/Main.storyboard
@@ -15,23 +15,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="xiC-iJ-fEL">
-                                <rect key="frame" x="24.5" y="93" width="271" height="294"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xiC-iJ-fEL">
+                                <rect key="frame" x="24.5" y="89" width="271" height="302.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤖" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ODi-HW-pBY">
-                                        <rect key="frame" x="98" y="0.0" width="75" height="84"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="70"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OzY-eI-Vjw">
-                                        <rect key="frame" x="100" y="98" width="71" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qma-iE-pkg">
+                                        <rect key="frame" x="59" y="0.0" width="153" height="84"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z78-2G-qmH">
+                                                <rect key="frame" x="0.0" y="24" width="19" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤖" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ODi-HW-pBY">
+                                                <rect key="frame" x="39" y="0.0" width="75" height="84"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9U-d0-ik7">
+                                                <rect key="frame" x="134" y="24" width="19" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rock, paper, scissors?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OzY-eI-Vjw">
+                                        <rect key="frame" x="30.5" y="104" width="210.5" height="26.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="bpk-ig-Aas">
-                                        <rect key="frame" x="0.0" y="148" width="271" height="96"/>
+                                        <rect key="frame" x="0.0" y="150.5" width="271" height="96"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Efy-yU-DID">
                                                 <rect key="frame" x="0.0" y="0.0" width="75" height="96"/>
@@ -60,7 +77,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCx-Zy-oS6">
-                                        <rect key="frame" x="91" y="258" width="89" height="36"/>
+                                        <rect key="frame" x="91" y="266.5" width="89" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Play again"/>
                                         <connections>
@@ -79,8 +96,10 @@
                     </view>
                     <connections>
                         <outlet property="fist" destination="Efy-yU-DID" id="PHU-Cc-C6A"/>
+                        <outlet property="leftWinScore" destination="z78-2G-qmH" id="kcr-bY-jMe"/>
                         <outlet property="palm" destination="oAB-fN-hnp" id="c5Z-8s-tAj"/>
                         <outlet property="playAgain" destination="MCx-Zy-oS6" id="UzT-oD-PDf"/>
+                        <outlet property="rightLoseSCore" destination="k9U-d0-ik7" id="g5P-oQ-zZN"/>
                         <outlet property="scissors" destination="fuH-sx-TjX" id="9cI-30-R6K"/>
                         <outlet property="status" destination="OzY-eI-Vjw" id="Xo0-qy-GnJ"/>
                         <outlet property="topSign" destination="ODi-HW-pBY" id="c1l-Y9-J3L"/>
